2011-02-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/run-opt.sh: Add run support.
	* examples/run-streaming.sh: Likewise.

	* testsuite/testTranslation.cpp: Fix testcase.

	* include/loopformula/CNFLocalLoopFormulaBuilder.h: Merged Luca's loopformula fix.
	* include/loopformula/IMPLocalLoopFormulaBuilder.h: Likewise.
	* include/loopformula/LocalLoopFormulaBuilder.h: Likewise.
	* include/loopformula/LoopFormulaDirector.h: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/loopformula/CNFLocalLoopFormulaBuilder.cpp: Likewise.
	* src/loopformula/LocalLoopFormulaBuilder.cpp: Likewise.

2011-02-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/ConflictNotification.h: Add session_id here and
	there.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* include/dmcs/StreamingDMCSNotification.h: Likewise.
	* include/dmcs/StreamingForwardMessage.h: Likewise.
	* include/dmcs/UnsatNotification.h: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/JoinThread.h: Likewise.
	* include/network/NeighborOut.h: Likewise.
	* include/network/RouterThread.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/solver/ChoicePoint.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/solver/RelSatSolver.cpp: Fix flipping.

	* include/solver/RelSatSolver.h: Directly pass learned_clauses to RelSatSolver.

	* include/solver/ChoicePoint.h: local_id --> orig_id

	* include/mcs/BeliefState.h: Improve output info.

2011-02-04  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Send new learned conflicts to Router.

	* include/solver/Conflict.h: operator<< for ConflictVec2p.

	* include/network/RouterThread.h: Pass on conflicts to NeighborOut.
